aks/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: quiz-backend
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: quiz-backend
        tier: backend
        track: stable
    spec:
      containers:
        - name: quiz-backend
          image: taodevops/sdafrontend:tagVersion
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: quiz-backend
    tier: backend
    track: stable
  type: ClusterIP
status:
  loadBalancer: {}
