aks/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-front-back
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: "frontend"
              servicePort: 80
          - path: /api/quiz/select?(.*)
            backend:
              serviceName: "backend"
              servicePort: 8080
#helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
#helm install nginx-ingress ingress-nginx/ingress-nginx
#kubectl apply -f ingress.yaml
